Minor entities updates to allow license acceptation and garden privacy level

--- a/src/Curba/GardeningBundle/Resources/views/Garden/silverlight.html.twig
+++ b/src/Curba/GardeningBundle/Resources/views/Garden/silverlight.html.twig
@@ -12,7 +12,7 @@
 			<param name="background" value="white" />
 			<param name="minRuntimeVersion" value="2.0.31005.0" />
 			<param name="autoUpgrade" value="true" />
-                        <param name="initParams" value="plants={{ plants|escape|replace({',': '%2C'}) }},zoneTypes={{ zoneTypes|escape|replace({',': '%2C'}) }},regions={{ regions|escape|replace({',': '%2C'}) }},crops={{ crops|escape|replace({',': '%2C'}) }},zones={{ zones|escape|replace({',': '%2C'}) }},garden={{ garden|escape|replace({',': '%2C'}) }},gardenTypes={{ gardenTypes|escape|replace({',': '%2C'}) }}" />
+                        <param name="initParams" value="height=500, width=300, plants={{ plants|escape|replace({',': '%2C'}) }},zoneTypes={{ zoneTypes|escape|replace({',': '%2C'}) }},regions={{ regions|escape|replace({',': '%2C'}) }},crops={{ crops|escape|replace({',': '%2C'}) }},zones={{ zones|escape|replace({',': '%2C'}) }},garden={{ garden|escape|replace({',': '%2C'}) }},gardenTypes={{ gardenTypes|escape|replace({',': '%2C'}) }}" />
 			<a href="http://go.microsoft.com/fwlink/?LinkID=124807" style="text-decoration: none;">
      			<img src="http://go.microsoft.com/fwlink/?LinkId=108181" alt="Get Microsoft Silverlight" style="border-style: none"/>
 			</a>
