Use of Google map for garden position selection

--- a/src/Curba/GardeningBundle/Resources/views/Garden/edit.html.twig
+++ b/src/Curba/GardeningBundle/Resources/views/Garden/edit.html.twig
@@ -1,24 +1,93 @@
 {% extends "CurbaGardeningBundle::layout.html.twig" %}
 
 {% block body_header %}
-
+Main
 {% endblock %}
 
 {% block body_content %}
+<h1>New garden</h1>
 
-<p>plants={{ plants|escape|replace({',': '%2C'}) }}</p>
-<p>zoneTypes={{ zoneTypes|escape|replace({',': '%2C'}) }}</p>  
-<p>regions={{ regions|escape|replace({',': '%2C'}) }}</p>
-<p>crops={{ crops|escape|replace({',': '%2C'}) }}</p>
-<p>crops={{ crops }}</p>
-<p>zones={{ zones|escape|replace({',': '%2C'}) }}</p>
-<p>zones={{ zones }}</p>
-<p>garden={{ garden|escape|replace({',': '%2C'}) }}</p>
-<p>garden={{ garden }}</p>
+{{ form_errors(form) }}
 
+<form action="{{ path('garden_edit', { 'id': garden.id }) }}" method="post" {{ form_enctype(form) }}>
+    {# form_widget(form) #}
+
+    {{ form_errors(form.name) }}
+    <p>
+        {{ form_label(form.name) }}
+        {{ form_widget(form.name) }}
+    </p>
+
+    {{ form_errors(form.description) }}
+    <p>
+        {{ form_label(form.description) }}
+        {{ form_widget(form.description) }}
+    </p>
+
+    <div class="grid_6 alpha">
+        {{ form_errors(form.latitude) }}
+        <p>
+            {{ form_label(form.latitude) }}
+            {{ form_widget(form.latitude) }}
+        </p>
+    </div>
+    
+    <div class="grid_6 omega">
+        {{ form_errors(form.longitude) }}
+        <p>
+            {{ form_label(form.longitude) }}
+            {{ form_widget(form.longitude) }}
+        </p>
+    </div>
+
+    {{ google_map_container(map) }}
+    {{ google_map_js(map) }}
+    {{ google_map_css(map) }}
+
+    <div class="grid_6 alpha">
+        {{ form_errors(form.width) }}
+        <p>
+            {{ form_label(form.width) }}
+            {{ form_widget(form.width) }}
+        </p>
+    </div>
+
+    <div class="grid_6 alpha">
+        {{ form_errors(form.height) }}
+        <p>
+            {{ form_label(form.height) }}
+            {{ form_widget(form.height) }}
+        </p>
+    </div>
+
+    {{ form_errors(form.garden_type) }}
+    <p>
+        {{ form_label(form.garden_type) }}
+        {{ form_widget(form.garden_type) }}
+    </p>
+
+    {{ form_errors(form.region) }}
+    <p>
+        {{ form_label(form.region) }}
+        {{ form_widget(form.region) }}
+    </p>
+
+    {{ form_errors(form.privacy_type) }}
+    <p>
+        {{ form_label(form.privacy_type) }}
+        {{ form_widget(form.privacy_type) }}
+    </p>
+    
+    {{ form_errors(form._token) }}
+    {{ form_widget(form._token) }}
+
+    <input type="submit" />
+</form>
 {% endblock %}
 
 {% block body_lateral %}
+<br/>
+<a href="{{ path('main') }}">Main</a>
 {% endblock %}
 
 {% block body_footer %}
