--- a/src/Curba/GardeningBundle/Resources/views/Main/index.html.twig
+++ b/src/Curba/GardeningBundle/Resources/views/Main/index.html.twig
@@ -13,8 +13,10 @@
     <ul>
       {% for garden in gardens %}
         <li>Garden {{ garden.name }} 
-            <a href="{{ path('garden_edit', { 'id': garden.id }) }}">start to work</a> |
-            <a href="{{ path('garden_index', { 'id': garden.id }) }}">information</a></li>
+            <a href="{{ path('garden_silverlight', { 'id': garden.id }) }}">start to work</a> |
+            <a href="{{ path('garden_index', { 'id': garden.id }) }}">information</a> | 
+            <a href="{{ path('garden_edit', { 'id': garden.id }) }}">modify</a>
+        </li>
       {% endfor %}
       <li><a href="{{ path('garden_new') }}">Create a new garden</a></li>
     </ul>
