Garden and user form edition modifications

--- a/src/Curba/GardeningBundle/Resources/views/Static/license.html.twig
+++ b/src/Curba/GardeningBundle/Resources/views/Static/license.html.twig
@@ -5,11 +5,88 @@
 {% block pageid 'pagina' %}
 
 {% block body_content %}
-    <h1>License</h1>
+    <h1>URVANGREEN PRINCIPLES</h1>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <a href="http://www.facebook.com/principles.php">Veure els principis de Facebook</a>
+    
+    <h2>Freedom to Share and Connect</h2>
+    <p>People should have the freedom to share whatever information they want, in any medium and any format, and have the right to connect online with anyone - any person, organization or service - as long as they both consent to the connection.<p>
+    <h2>Ownership and Control of Information</h2>
+    <p>People should own their information. They should have the freedom to share it with anyone they want and take it with them anywhere they want, including removing it from the Facebook Service. People should have the freedom to decide with whom they will share their information, and to set privacy controls to protect those choices. Those controls, however, are not capable of limiting how those who have received information may use it, particularly outside the Facebook Service.</p>
+    <h2>Free Flow of Information</h2>
+    <p>People should have the freedom to access all of the information made available to them by others. People should also have practical tools that make it easy, quick, and efficient to share and access this information.</p>
+    <h2>Fundamental Equality</h2>
+    <p>Every Person - whether individual, advertiser, developer, organization, or other entity - should have representation and access to distribution and information within the Facebook Service, regardless of the Person's primary activity. There should be a single set of principles, rights, and responsibilities that should apply to all People using the Facebook Service.</p>
+    <h2>Social Value</h2>
+    <p>People should have the freedom to build trust and reputation through their identity and connections, and should not have their presence on the Facebook Service removed for reasons other than those described in Facebook's Statement of Rights and Responsibilities.</p>
+    <h2>Common Welfare</h2>
+    <p>The rights and responsibilities of UrvanGreen and the People that use it should be described in a Statement of Rights and Responsibilities, which should not be inconsistent with these Principles.</p>
+    <h2>One World</h2>
+    <p>UrvanGreen should transcend geographic and national boundaries and be available to everyone in the world.</p>
+    
 
-    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <h1>LICENCIA DE USUARIO FINAL</h1>
+    
+    <a href="http://www.facebook.com/terms.php">Veure la llicencia de Facebook</a>
+    
+    <p>This agreement was written in English (US). To the extent any translated version of this agreement conflicts with the English version, the English version controls.  Please note that Section 16 contains certain changes to the general terms for users outside the United States.</p>
+    <p>Date of Last Revision: November 10, 2011</p>
+
+    <h2>0. Preámbulo.</h2>
+    <p>Esta licencia de Usuario Final tiene por objeto el programa denominado URVANGREEN.</p>
+    <p>La instalación y/o el uso de este programa supondrá la aceptación por parte de Vd, en su condición de USUARIO FINAL y LICENCIATARIO de todas las condiciones y términos de esta licencia de uso, los cuales sustituirán totalmente cualquier otro texto previo, publicidad o documento que hubiese sido librado anteriormente a la presente licencia de uso.</p>
+
+    <h2>1. Concesión de Licencia.</h2>
+    <p>URVANGREEN en su calidad de LICENCIANTE le otorga a Vd., USUARIO FINAL LICENCIATARIO un derecho no exclusivo e intransferible a UTILIZAR el programa antes citado con carácter indefinido.
+    
+    <h2>2. Ámbito de la licencia.</h2>
+    <p>Vd. única y exclusivamente podrá utilizar el programa.</p>
+
+    <h2>3. Derechos del Usuario Final.</h2>
+    <p>El Usuario Final tiene los siguientes derechos:</p>
+    <p>3.1. Utilizar el programa de conformidad con las instrucciones incluidas en el Manual de Usuario facilitado.</p>
+    <p>3.2. Observar, estudiar y verificar el funcionamiento del programa durante su ejecución.</p>
+
+    <h2>4. Prohibiciones.</h2>
+    <p>El Usuario Final NO podrá bajo ningún concepto:</p>
+    <p>4.1. Acceder al Código Fuente del programa.</p>
+    <p>4.2. Efectuar modificaciones, alteraciones, nuevas versiones, programas derivados o incluir el programa en otras aplicaciones.</p>
+    <p>4.3. Reproducirlo, hacer copias, además de la copia de seguridad ya indicada, divulgarlo o distribuirlo, ya sea con finalidad comercial o no.</p>
+    <p>4.4. Llevar a cabo operaciones de ingeniería inversa, descompilar o desensamblar.</p>
+    <p>4.5. Ceder el programa, darlo en préstamo, sublicenciarlo, alquilarlo, arrendarlo, o efectuar cualquier acto que suponga una cesión o transmisión temporal o indefinida del programa, ya sea onerosa o gratuita.</p>
+    <p>4.6. Realizar actos que supongan, directa o indirectamente, una explotación económica del programa.</p>
+    <p>4.7. Realizar cualquier acto o contrato no incluido en los apartados anteriores que no implique la exclusiva y única satisfacción de sus necesidades como usuario.</p>
+
+    <h2>5. Obligaciones.</h2>
+    <p>El USUARIO final deberá:</p>
+    <p>5.1. Pagar en concepto de derechos de uso la suma correspondiente al PRECIO abonado por el programa /y, en su caso, la cuota mensual/anual de..... Euros, a abonar dentro de los primeros..... días de cada año/mes en la cuenta....., haciendo constar en el concepto del ingreso el número de licencia del presente contrato, esto es el ..... (mismo número de licencia que consta al principio de este documento).</p>
+    <p>5.2. Observar las advertencias y seguir las instrucciones contenidos en el Manual de Uso del Programa entregado junto al mismo.</p>
+    <p>5.3. Dar aviso al distribuidor y, en su defecto, a..... (empresa informática) de cualquier acto o actividad que pueda ser contrario o representar una vulneración de los derechos de propiedad intelectual o industrial de..... (empresa informática).</p>
+    
+    <h2>6. Propiedad intelectual e industrial y derechos de explotación económica del programa.</h2>
+    <p>Este programa, juntamente con toda su documentación e información corresponde única y exclusivamente a..... (empresa informática) y/o a su/s distribuidor/es.</p>
+    <p>Todos los derechos de propiedad intelectual, industrial y, especialmente, los derechos de explotación económica del programa son titularidad exclusiva de la/s persona/s antes citadas.</p>
+
+    <h2>7. Garantía.</h2>
+    <p>La empresa ..... (empresa informática) garantiza al USUARIO el funcionamiento del programa de conformidad con su descripción técnica y en los equipos, sistemas operativos y, en su caso, en aquellas aplicaciones cuya compatibilidad e interoperabilidad con el programa licenciado haya sido expresamente reconocida en la propia aplicación, en su Manual de Uso o bien en instrucciones o comunicaciones dirigidas al cliente dados por la propia..... (nombre de la empresa informática).</p>
+    <p>Se otorga una garantía de buen funcionamiento de..... meses/años a partir de la adquisición del presente programa.</p>
+    <p>Durante el mencionado período de garantía, la empresa ..... (empresa informática) se obliga a sustituir cualquier programa defectuoso al USUARIO y sin ningún tipo de coste adicional.</p>
+
+    <h2>8. Mejoras y nuevas versiones.</h2>
+    <p>El usuario conoce y acepta que durante el período contratado de licencia pueden salir al mercado, a causa de la evolución técnica, mejoras o bien nuevas versiones del programa licenciado. El licenciatario podrá optar por un producto diferente, según la política de migraciones que la empresa licenciataria establezca, comprometiéndose a aceptarla y a adaptar sus equipos y sistemas si ello fuese necesario.</p>
+    <p>La migración a los nuevos productos será gratuita durante el período de..... años desde la adquisición del presente programa/supondrá para el nuevo usuario el pago de una cantidad adicional según las tarifas vigentes en el momento de la migración.</p>
+    <p>Un vez efectuada la migración al nuevo producto o programa, este último será el único que el USUARIO tendrá derecho a utilizar, quedando sin efecto la presente licencia y rigiéndose la relación con el USUARIO por la nueva licencia que le sea entregada con el nuevo producto o programa. El USUARIO habrá de devolver a su distribuidor o a la empresa..... (nombre de la empresa informática) inmediatamente el presente programa, con todas sus copias y documentación adjunta.</p>
+
+    <h2>9. Resolución de la licencia.</h2>
+    <p>La presente licencia podrá ser resuelta con efectos inmediatos por la empresa licenciante en cualquiera de los siguientes supuestos:</p>
+    <p>9.1. Si el USUARIO vulnera cualquiera de las prohibiciones previstas en la Cláusula 4.</p>
+    <p>9.2. Si el USUARIO incumple cualquiera de las obligaciones previstas en la Cláusula 5.</p>
+    
+    <h2>10. Autorización de inspección y visita.</h2>
+    <p>EL USUARIO, al aceptar esta licencia, autoriza expresamente a la empresa licenciante para que pueda, a través de su personal o de terceras personas, inspeccionar y visitar sus dependencias e instalaciones con el fin de comprobar el cumplimiento de los términos y condiciones de esta licencia.</p>
+    <p>El acceso a los locales se llevará a cabo en días laborables y bajo supervisión del personal del cliente.</p>
+    
+    
 {% endblock %}
 
 {% block body_lateral %}
