Language change implemented

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -68,9 +68,9 @@
                 </div>
                 <div id="horitzontal" class="grid_6">
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                        <a class="user_info" href="{{ path('main') }}">My gardening</a>
-                        <a class="user_info" href="{{ path('profile') }}">My profile</a>
-                        <a class="user_info" href="/logout">Logout</a>
+<!--                        <a class="user_info" href="{# path('main') #}">My gardening</a>
+                        <a class="user_info" href="{# path('profile') #}">My profile</a>
+-->                        <a class="user_info" href="/logout">Logout</a>
                     {% endif %}
                 </div>
 
