--- a/src/Curba/GardeningBundle/Resources/views/Main/index.html.twig
+++ b/src/Curba/GardeningBundle/Resources/views/Main/index.html.twig
@@ -15,6 +15,7 @@
         <li>Garden {{ garden.name }} 
             <a href="{{ path('garden_silverlight', { 'id': garden.id }) }}">start to work</a> |
             <a href="{{ path('garden_index', { 'id': garden.id }) }}">information</a> | 
+            <a href="{{ path('garden_history', { 'id': garden.id }) }}">history</a> | 
             <a href="{{ path('garden_edit', { 'id': garden.id }) }}">modify</a> |
             <a href="{{ path('station_new') }}">Create a new station</a>
             <ul>
