--- a/src/Curba/GardeningBundle/Resources/views/Garden/history.html.twig
+++ b/src/Curba/GardeningBundle/Resources/views/Garden/history.html.twig
@@ -13,6 +13,41 @@
 
 </br>
 <h2>History</h2>
+
+{#
+Crops:</br>
+{% for c in crops %}
+    {{ c|json_encode() }}</br>
+    
+    {% for key,value in c %}
+        -->{{ key }} -- {{ value|json_encode() }}</br>
+    {% endfor %}
+{% endfor %}
+#}
+
+<table class="plant">
+    <tr>
+        <th class="plant">Zone</th>
+        <th class="plant">Plantation date</th>
+        <th class="plant">Plantation end</th>
+        <th class="plant">Plant</th>
+        <th class="plant">Total Quantity A</th>
+        <th class="plant">Total Quantity B</th>
+    </tr>
+    {% for c in crops %}
+    <tr>
+        <th>{{ c[0]['zone']['name']|json_encode() }}</th>
+        <td>{{ c[0]['initialRealDate'].format('Y-m-d H:i:s') }}</td>
+        <td>{{ c[0]['finalRealDate'].format('Y-m-d H:i:s') }}</td>
+        <td>{{ c[0]['plant']['name']|json_encode() }}</td>
+        <td>{{ c[1]|json_encode() }}</td>
+        <td>{{ c[2]|json_encode() }}</td>
+    </tr>
+    {% endfor %}
+</table>
+
+<h3>Details</h3>
+
 <table class="plant">
     <tr>
         <th class="plant">Zone</th>
@@ -21,6 +56,8 @@
         <th class="plant">Action date</th>
         <th class="plant">Action</th>
         <th class="plant">Description</th>
+        <th class="plant">Quantity A</th>
+        <th class="plant">Quantity B</th>
     </tr>
     {% for a in actions %}
     <tr>
@@ -30,6 +67,8 @@
         <td>{{ a['createdAt'].format('Y-m-d H:i:s') }}</td>
         <td>{{ a['action_type']['name']|json_encode() }}</td>
         <td>{{ a['description']|json_encode() }}</td>
+        <td>{{ a['quantityA']|json_encode() }}</td>
+        <td>{{ a['quantityB']|json_encode() }}</td>
     </tr>
     {% endfor %}
 </table> 
